# max32650-rs

./: Cargo.toml  README.md  device.x  max32650.svd  max32650.svd.patch
src/: adc.rs  aes_key.rs  bbfc.rs  bbsir.rs  clcd.rs  crypto.rs  dma.rs  emcc.rs  flc.rs  gcr.rs  gpio0.rs  hpb.rs  i2c0.rs  icc0.rs  lib.rs  nbbfc.rs  otp.rs  owm.rs  pt.rs  ptg.rs  pwrseq.rs  rtc.rs  sdhc.rs  sdma.rs  sema.rs  sir.rs  smon.rs  spi17y.rs  spid.rs  spimss.rs  spixc_fifo.rs  spixf.rs  spixfc.rs  tmr0.rs  trng.rs  uart0.rs  usbhs.rs  wdt0.rs
src/adc/: ctrl.rs  data.rs  intr.rs  limit.rs  status.rs
src/aes_key/: aes_key0.rs  aes_key1.rs  aes_key2.rs  aes_key3.rs
src/bbfc/: bbfcr0.rs
src/bbsir/: bb_sir2.rs  bb_sir3.rs
src/clcd/: clk.rs  ctrl.rs  fr.rs  htim.rs  hv_phase.rs  int_en.rs  palette.rs  stat.rs  vtim_0.rs  vtim_1.rs
src/crypto/: cipher_ctrl.rs  cipher_init.rs  cipher_key.rs  crc_ctrl.rs  crc_poly.rs  crc_prng.rs  crc_val.rs  ctrl.rs  din.rs  dma_cnt.rs  dma_dest.rs  dma_src.rs  dout.rs  ham_ecc.rs  hash_ctrl.rs  hash_digest.rs  hash_msg_sz.rs  maa_ctrl.rs  maa_maws.rs
src/dma/: ch.rs  cn.rs  intr.rs
src/emcc/: cache_ctrl.rs  invalidate.rs
src/flc/: acntl.rs  addr.rs  clkdiv.rs  cn.rs  data.rs  intr.rs
src/gcr/: clkcn.rs  evten.rs  memckcn.rs  memzcn.rs  mpri0.rs  mpri1.rs  pckdiv.rs  perckcn0.rs  perckcn1.rs  pll0cn.rs  pll1cn.rs  pm.rs  revision.rs  rstr0.rs  rstr1.rs  scck.rs  scon.rs  syssie.rs  sysst.rs
src/gpio0/: ds.rs  ds1.rs  en.rs  en1.rs  en1_clr.rs  en1_set.rs  en2.rs  en2_clr.rs  en2_set.rs  en_clr.rs  en_set.rs  in_.rs  int_clr.rs  int_en.rs  (+19 more)
(+294 files in other folders)
