[package]
name = "max32650-rs"
version = "0.1.2"
authors = ["Jonathan Fisher <jonathanmarkfisher@gmail.com>"]
edition = "2018"
keywords = ["max32650", "svd2rust", "no_std", "embedded"]
categories = ["embedded", "no-std"]

[dependencies]
bare-metal = "0.2.4"
cortex-m = ">=0.5.8&<0.7"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.10"

[package.metadata.docs.rs]
features = ['rt']
default-target = "thumbv7em-none-eabihf"
targets = []

[features]
rt = ["cortex-m-rt/device"]
